crates/biome_html_parser/tests/html_specs/ok/svelte/js_comments_in_component_tags.svelte
<Component
/* block comment */
prop="value"
/>
<Component
// line comment
prop="value"
/>
<Component /* inline block comment */ prop="value" />
<Component // inline line comment
prop="value" />
<Component.Member
/* block comment */
prop="value"
/>
