crates/biome_html_parser/tests/html_specs/error/svelte/unterminated_js_multiline_comment.svelte
<div
  /* block comment
  class="foo"
>text</div>
